chore: stabilize tests