@@ -19,6 +19,7 @@
     <properties>
         <java.version>17</java.version>
         <aws.sdk.version>2.29.16</aws.sdk.version>
+        <surefire.additional.argLine></surefire.additional.argLine>
     </properties>
 
     <dependencies>
@@ -92,12 +93,20 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+                <argLine>-Dnet.bytebuddy.experimental=true ${surefire.additional.argLine}</argLine>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
